@@ -31,11 +31,26 @@ class LDARunner extends MLRunner {
   /**
     * Training job to obtain a model
     */
-  override
-  def train(conf: Configuration): Unit = {
+  override def train(conf: Configuration): Unit = {
     conf.setInt(AngelConf.ANGEL_WORKER_MAX_ATTEMPTS, 1)
     conf.setInt(AngelConf.ANGEL_WORKER_TASK_NUMBER, 1)
     conf.set(AngelConf.ANGEL_INPUTFORMAT_CLASS, classOf[BalanceInputFormat].getName)
+
+    var mem = conf.getInt(AngelConf.ANGEL_WORKER_MEMORY_MB, -1)
+    if (mem == -1)
+      mem = conf.getInt(AngelConf.ANGEL_WORKER_MEMORY_GB, 1) * 1000
+    var javaOpts = s"-Xmx${mem}M -Xms${mem}M -XX:+UseConcMarkSweepGC -XX:+PrintGCTimeStamps -XX:+PrintGCDetails"
+    LOG.info(javaOpts)
+    conf.set(AngelConf.ANGEL_WORKER_JAVA_OPTS, javaOpts)
+
+    mem = conf.getInt(AngelConf.ANGEL_PS_MEMORY_MB, -1)
+    if (mem == -1)
+      mem = conf.getInt(AngelConf.ANGEL_PS_MEMORY_GB, 1) * 1000
+    javaOpts = s"-Xmx${mem}M -Xms${mem}M -XX:+UseConcMarkSweepGC -XX:+PrintGCTimeStamps -XX:+PrintGCDetails"
+    conf.set(AngelConf.ANGEL_PS_JAVA_OPTS, javaOpts)
+    LOG.info(javaOpts)
+
+
     LOG.info(s"n_tasks=${conf.getInt(AngelConf.ANGEL_WORKER_TASK_NUMBER, 0)}")
 //    train(conf, new LDAModel(conf), classOf[LDATrainTask])
 
@@ -60,7 +75,7 @@ class LDARunner extends MLRunner {
 
     client.startPSServer()
     client.loadModel(new LDAModel(conf))
-    client.runTask(classOf[LDAInferTask])
+    client.runTask(classOf[LDAPredictTask])
     client.waitForCompletion()
     //    client.saveModel(model)
 
